The bot compiles!